# rchip8

./: Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml
debugger/: Cargo.toml
debugger/src/: debugger.rs  main.rs
lib/: Cargo.toml
lib/src/: cpu.rs  instructions.rs  lib.rs  test_instructions.rs
src/: cpu.rs  debugger.rs  instructions.rs  main.rs  test_instructions.rs
wasm/: Cargo.toml  README.md  index.html
wasm/src/: lib.rs
