[package]
name = "rchip8"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rchip8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
byteorder = "1.3.4"
sdl2 = "0.34.0"   # graphics/audio/key presses
colored = "1.9"
pretty-hex = "0.1.1"
linefeed = "0.6.0"