[package]
name = "rchip8"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rchip8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"       # error handling
byteorder = "1.3.4"     # read_u16 opcodes
rand = "0.7.3"          # rnd_vx_kk instruction

#tui = "0.9.5"           # graphics
#termion = "1.5"         # graphics backend

colored = "1.9"         # debugger text
pretty-hex = "0.1.1"    # debugger hexdump
linefeed = "0.6.0"      # debugger stdin/history

[profile.release]
opt-level = 'z'         # Optimize for size.
lto = true
#codegen-units = 1
panic = 'abort'