[package]
name = "debugger"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "debugger"
path = "src/main.rs"


[dependencies]
rchip8 = {path ="../lib",version = "0.1.0"}
anyhow = "1.0.31"       # error handling
byteorder = "1.3.4"     # read_u16 opcodes
colored = "1.9"         # debugger text
pretty-hex = "0.1.1"    # debugger hexdump
linefeed = "0.6.0"      # debugger stdin/history
termion = "1.5.5"

