[package]
name = "rchip8"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"
description = """
A library that implements the Chip8 instruction set architecture.
"""
keywords = ["chip8", "emulator"]
homepage = "https://github.com/landhb/rchip8"
documentation = "https://docs.rs/rchip8-lib"
repository = "https://github.com/landhb/rchip8"
readme = "README.md"
license = "Apache-2.0 OR MIT"


[dependencies]
anyhow = "1.0.31"       # error handling
byteorder = "1.3.4"     # read_u16 opcodes
rand = "0.7.3"          # rnd_vx_kk instruction
bitvec = {version="0.19.3",features=['alloc']}       # keyboard and screen abstractions