[package]
name = "rchip8-wasm"
version = "0.1.0"
authors = ["landhb <landherrb@gmail.com>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rchip8 = {path ="../lib",version = "0.1.0"}
lazy_static = "1.4.0"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]